fixed navbar collapse issue. teams formatting tweaks

--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,21 @@
 body { 
-  padding-top: 56px;
   background-color: #455a64;
+  position: relative;
 }
 
 nav {
   font-size: 1.4em;
   box-shadow: 0 2px 5px rgba(0,0,0,.26);
   z-index: 1;
+}
+
+.navbar {
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+.active {
+    border-bottom: 1px solid blue;
 }
 
 #hero-landing {
@@ -26,6 +35,7 @@ nav {
   background-color: transparent;
   color: #eeeeee;
   opacity: 0.8;
+  margin: 0;
 }
 
 .display-4 {
